fix: font size too small in mobile

--- a/style.css
+++ b/style.css
@@ -137,7 +137,7 @@ body{
 }
 .footer span{
     padding: 2rem 2rem 0rem 2rem;
-    width:80%;
+    width:100%;
     
     text-align: center;
     
@@ -145,6 +145,11 @@ body{
    
     color:rgb(218, 218, 26) ;
     font-family: monospace;
-    font-size:2vw;
+    font-size:calc(2vw*0.7);
     
+}
+@media  only screen and (max-width:500px){
+    .footer span{
+        font-size:12px;
+    }
 }
